tests/expectations/compiler/async_blocks/invalid_expr_in_async_block_fail.out
Error [ETYC0372147]: Invalid expression in a final block. `self.signer` cannot be used directly here.
    --> compiler-test:4:21
     |
   4 |             let s = self.signer;
     |                     ^^^^^^^^^^^
     |
     = Bind `self.signer` to a variable before the `final` block: `let val = self.signer;`
Error [ETYC0372147]: Invalid expression in a final block. `self.caller` cannot be used directly here.
    --> compiler-test:5:21
     |
   5 |             let c = self.caller;
     |                     ^^^^^^^^^^^
     |
     = Bind `self.caller` to a variable before the `final` block: `let val = self.caller;`
